# test-model-infer

./: readme.md
include/tests/: test.h
include/utils/: utils.h  utilsDef.h
src/tests/: test.cpp
src/utils/: utils.cpp
tests/: config.json  main.cpp
tests/denglin/: CMakeLists.txt  easy-cmake.sh
tests/openvino/: CMakeLists.txt  easy-cmake.sh
tests/tensorrt/: CMakeLists.txt  easy-cmake.sh
